	general:
		Added port to OpenBSD, is under test.

	mbsebbs:
		The creation of the mailout semafore is now after the hangup
		so that mbfido won't start before the bbs is finished.
		Removed bbslist menus, this will become a door.
		Added #define NFGVMIN 1 in openport.
		During hangup we set sighup to ignore.
		Made zmodem-8k downloads work again.
		Some small buffer protections added in addfile.

	mbnewuser:
		During hangup we set sighup to ignore.

	mbfile:
		The adopt command now first checks if the filename is 8.3 or a
		long filename and the correct format for import is then set.
		With mbfile import, download counters in files.bbs are skipped.
		When the file description was missing in files.bbs with the
		import command, mbfile would crash. Now a dummy description is
		inserted.
		The directory from which the import is done is first tested for
		write access, if forbidden then no import is done. This also
		means you cannot import directly from CD's but that you need
		to copy the CD contents first to a harddisk.
		Better error reporting if something is wrong.
		The import command now also figures out the difference between
		8.3 and long filenames and does the right thing during import.

	mbfido:
		In rfc2ftn a debug logmessage added to check for unrecognised
		message ids.

	mbnntp:
		Removed dead timercode.
		Code cleanup.
		When a message is posted without RFC Messageid, a fidonet MSGID
		is fresh created.
		Changed X-JAM kludges to X-FTN kludges to make it compatible
		with the rest of the gates.

	mbsetup:
		Added support for XxxxBSD console port.
		For new systems, there will now be 16 terminal ports created
		instead of 10, this is the maximum number of safe created ttys.
		The ttys are now sorted on the comment fields.

	examples:
		Removed bbs list items from the English menus and txtfiles and
		the Spanish menus and txtfiles.
		Fixed the menu archives so that they contain menu files again.

	lang:
		TODO: remove bbslist entries.

